# actix-web-diesel-sample-app

./: README.md  docker-compose.yml
app/: .env  Cargo.toml  Dockerfile
app/src/: main.rs  schema.org.rs
app/src/helpers/: consts.rs  db.rs  errors.rs  log.rs  mod.rs  util.rs
app/src/routes/: index.rs
